--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -1,1 +1,20 @@
-<p>add works!</p>
+<form
+[formGroup]="PostForm"
+(ngSubmit)="submitPost()" >
+
+<div>
+    <label for="name">Titre :</label>
+    <input type="text" formControlName="title">
+</div>
+<div>
+    <label for="name">Description :</label>
+    <textarea formControlName="description"></textarea>
+</div>
+<div>
+    <label for="name">Lien :</label>
+    <input type="text" formControlName="link">
+</div>
+
+<button type="submit">SUBMIT</button>
+
+</form>
