--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,5 +1,5 @@
 <!-- Afficher avec une boucle *ngFor une liste de composant Post (PostComponent) -->
-
+<app-add></app-add>
 <ul>
     <li *ngFor="let post of posts">
         <!--<span>{{ post.id }}</span>
@@ -8,4 +8,3 @@
         <app-post [post]="post"></app-post>
     </li>
 </ul>
-
