--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,7 +1,9 @@
 <p>
-    <span>{{ post.id }}</span>
-    <span> | </span>
     <span>{{ post.title }}</span>
+    <span> | </span>
+    <span>{{ post.description }}</span>
+    <span> | </span>
+    <span>{{ post.link }}</span>
 
 </p>
 
