--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -10,7 +10,7 @@
         <span>{{ post.title }}</span> -->
         <app-post [post]="post"></app-post>
         <button mat-raised-button (click)="delPost(post)">Supprimer</button>
-        <button mat-raised-button (click)="editPost(post.id,post)">Editer</button>
+        <button mat-raised-button (click)="modifPost(post)">Editer</button>
         <br>
     </li>
 </ul>
